Initial backend scaffold

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 DATABASE_URL=postgresql://neondb_owner:npg_fp8GLQBn6zhS@ep-noisy-shadow-adonkhx9-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 # Optional: set your frontend/public base url (used to generate full short URLs on UI)
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+# Optional: base URL for generated short links (for production, set to your deployed backend)
+# Example: https://url-shortner-backend-lac.vercel.app
+SHORT_URL_BASE=https://url-shortner-backend-lac.vercel.app
