Initial backend scaffold

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,18 @@
-# Copy to .env and fill in your values
-DATABASE_URL=postgresql://neondb_owner:npg_fp8GLQBn6zhS@ep-noisy-shadow-adonkhx9-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-# Optional: set your frontend/public base url (used to generate full short URLs on UI)
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-# Optional: base URL for generated short links (for production, set to your deployed backend)
-# Example: https://url-shortner-backend-lac.vercel.app
-SHORT_URL_BASE=https://url-shortner-backend-lac.vercel.app
+# Example environment variables for TinyLink backend
+# Replace values with your deployment-specific values.
+
+# PostgreSQL connection string (required)
+DATABASE_URL=postgresql://user:password@host:5432/dbname
+
+# Public base URL used to construct short URLs (e.g. https://tiny.example.com)
+# If not set, the server will derive the host from incoming requests.
+SHORT_URL_BASE=https://your-deployed-domain.example.com
+
+# Restrict CORS origin for production (set to your frontend origin). Use '*' for open.
+CORS_ORIGIN=*
+
+# Port to run locally
+PORT=4000
+
+# Optional: set to true to enable verbose DB query logging
+# VERBOSE_DB=false
